finalizing page 11 e 12 and adding right arrows and share box

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
 
 	<body>
 		<div class="reveal">
+			<div class="share">
+				<p>Compartilhe</p>
+				<ul>
+					<li><a href="#">facebook</a></li>
+					<li><a href="#">twitter</a></li>
+					<li><a href="#">google+</a></li>
+				</ul>
+			</div>
+			<div class="stamp"></div>
 			<!-- 0 -->
 			<div class="slides">
 				<section data-background="#eeeeee">
@@ -41,7 +50,7 @@
 						<img src="img/logos.png"></img>
 
 						<!-- navigation -->
-						<a class="arrow-down" href="#/1">próximo</a>
+						<a class="arrow-right" href="#/1">próximo</a>
 					</div>
 				</section>
 
@@ -107,15 +116,15 @@
 					<p class="question">Para os resultados da pesquisa ficarem ainda mais interessantes, queremos saber se os leitores responderam ou não o questionário. Relaxa que isso não muda em nada o que você vai ver! É só para fazermos tcha tcha e tchu tchu pois não sei mais o que escrever. Sou só um designer laiautando e pensando na vida...</p>
 
 					<!-- navigation -->
-					<a class="arrow-left" href="#/5">não</a>
-					<a class="arrow-right" href="#/5">sim</a>
+					<a class="question-button" href="#/5">não</a>
+					<a class="question-button" href="#/5">sim</a>
 				</section>
 
-				<section>
-					<!-- 5 -->
-					<section data-background="#e89e39">
-						<h2 class="light-h2">Como lemos o resultado?</h2>
-						<p class="subtitle">Separamos a pesquisa em capítulos, que agrupam questões relacionadas e facilitam a leitura e entendimento dos dados.</p>
+				<!-- 5 -->
+				<section data-background="#e89e39">
+					<h2 class="light-h2">Como lemos o resultado?</h2>
+					<p class="subtitle">Separamos a pesquisa em capítulos, que agrupam questões relacionadas e facilitam a leitura e entendimento dos dados.</p>
+					<div class="chapters">
 						<figure class="result-group">
 							<img src="img/icone-perfil.png">
 							<figcaption>Perfil</figcaption>
@@ -132,72 +141,78 @@
 							<img src="img/icone-realizadores.png">
 							<figcaption>Realizadores</figcaption>
 						</figure>
+					</div>
 
-						<!-- navigation -->
-						<a class="arrow-left" href="#/4">anterior</a>
-						<a class="arrow-down" href="#/5/1">próximo</a>
-					</section>
+					<!-- navigation -->
+					<a class="arrow-left" href="#/4">anterior</a>
+					<a class="arrow-right" href="#/5/1">próximo</a>
+				</section>
 
-					<!-- 5/1 -->
-					<section class="result-group-page" data-background="#f38c34">
-						<img src="img/icone-perfil.png">
-						<h3>Perfil</h3>
-						<p>Quem somos nós? Com esta pergunta, começamos a compor o retrato do financiamento coletivo no Brasil, sob a perspectiva de quem faz ele acontecer. Muitas são as possibilidades de contar.</p>
+				<!-- 6 -->
+				<section class="result-group-page" data-background="#f38c34">
+					<img src="img/icone-perfil.png">
+					<h3>Perfil</h3>
+					<p>Quem somos nós? Com esta pergunta, começamos a compor o retrato do financiamento coletivo no Brasil, sob a perspectiva de quem faz ele acontecer. Muitas são as possibilidades de contar.</p>
 
-						<!-- navigation -->
-						<a class="arrow-up" href="#/5">anterior</a>
-						<a class="arrow-down" href="#/5/2">próximo</a>
-					</section>
+					<!-- navigation -->
+					<a class="arrow-left" href="#/5">anterior</a>
+					<a class="arrow-right" href="#/5/2">próximo</a>
+				</section>
 
-					<!-- 5/2 -->
-					<section class="result-group-page" data-background="#f37c34">
-						<img src="img/icone-financiamento.png">
-						<h3>Financiamento</h3>
-						<p>Quem somos nós? Com esta pergunta, começamos a compor o retrato do financiamento coletivo no Brasil, sob a perspectiva de quem faz ele acontecer. Muitas são as possibilidades de contar.</p>
+				<!-- 7 -->
+				<section class="result-group-page" data-background="#f37c34">
+					<img src="img/icone-financiamento.png">
+					<h3>Financiamento</h3>
+					<p>Quem somos nós? Com esta pergunta, começamos a compor o retrato do financiamento coletivo no Brasil, sob a perspectiva de quem faz ele acontecer. Muitas são as possibilidades de contar.</p>
 
-						<!-- navigation -->
-						<a class="arrow-up" href="#/5/1">anterior</a>
-						<a class="arrow-down" href="#/5/3">próximo</a>
-					</section>
+					<!-- navigation -->
+					<a class="arrow-left" href="#/5/1">anterior</a>
+					<a class="arrow-right" href="#/5/3">próximo</a>
+				</section>
 
-					<!-- 5/3 -->
-					<section class="result-group-page" data-background="#f36c34">
-						<img src="img/icone-rede.png">
-						<h3>Rede</h3>
-						<p>Quem somos nós? Com esta pergunta, começamos a compor o retrato do financiamento coletivo no Brasil, sob a perspectiva de quem faz ele acontecer. Muitas são as possibilidades de contar.</p>
+				<!-- 8 -->
+				<section class="result-group-page" data-background="#f36c34">
+					<img src="img/icone-rede.png">
+					<h3>Rede</h3>
+					<p>Quem somos nós? Com esta pergunta, começamos a compor o retrato do financiamento coletivo no Brasil, sob a perspectiva de quem faz ele acontecer. Muitas são as possibilidades de contar.</p>
 
-						<!-- navigation -->
-						<a class="arrow-up" href="#/5/2">anterior</a>
-						<a class="arrow-down" href="#/5/4">próximo</a>
-					</section>
+					<!-- navigation -->
+					<a class="arrow-left" href="#/5/2">anterior</a>
+					<a class="arrow-right" href="#/5/4">próximo</a>
+				</section>
 
-					<!-- 5/4 -->
-					<section class="result-group-page" data-background="#f35c34">
-						<img src="img/icone-realizadores.png">
-						<h3>Realizadores</h3>
-						<p>Quem somos nós? Com esta pergunta, começamos a compor o retrato do financiamento coletivo no Brasil, sob a perspectiva de quem faz ele acontecer. Muitas são as possibilidades de contar.</p>
+				<!-- 9 -->
+				<section class="result-group-page" data-background="#f35c34">
+					<img src="img/icone-realizadores.png">
+					<h3>Realizadores</h3>
+					<p>Quem somos nós? Com esta pergunta, começamos a compor o retrato do financiamento coletivo no Brasil, sob a perspectiva de quem faz ele acontecer. Muitas são as possibilidades de contar.</p>
 
-						<!-- navigation -->
-						<a class="arrow-up" href="#/5/3">anterior</a>
-						<a class="arrow-down" href="#/5/5">próximo</a>
-					</section>
+					<!-- navigation -->
+					<a class="arrow-left" href="#/5/3">anterior</a>
+					<a class="arrow-right" href="#/5/5">próximo</a>
+				</section>
 
-					<!-- 5/5 -->
-					<section data-background="#eeeeee">
-						<h1>Curioso para ver o resultado?</h1>
+				<!-- 10 -->
+				<section data-background="#eeeeee">
+					<h2 class="dark-h2">Curioso para ver o resultado?</h2>
+					<p class="big-subtitle">(com dados bonitões, cheio de infográficos e informações quentes sobre a pesquisa)</p>
 
-						<!-- navigation -->
-						<a class="arrow-up" href="#/5/4">anterior</a>
-						<a class="arrow-down" href="#/5/6">próximo</a>
-					</section>
+					<!-- navigation -->
+					<a class="arrow-left" href="#/5/4">anterior</a>
+					<a class="arrow-right" href="#/5/6">próximo</a>
+				</section>
 
-					<!-- 5/6 -->
-					<section data-background="#eeeeee">
-						<h1>Também estamos curiosos</h1>
+				<!-- 11 -->
+				<section data-background="#eeeeee">
+					<h2 class="green-h2">Também estamos curiosos</h2>
+					<p class="presentation-text">Nós do Catarse e da Chorus achamos que essa pesquisa merece todo carinho e atenção do mundo para entregarmos a você um trabalho lindo, completo e com ainda mais surpresas. Precisamos de um pouco mais de tempo para isso...</p>
+					<p class="presentation-text">Em janeiro de 2014, quando o Catarse completará 3 aninhos de vida, esse será o nosso presente para a comunidade de financiamento coletivo mais curiosa do Brasil!</p>
+					<p class="presentation-text">Quer saber sobre o lançamento da pesquisa e receber novidades do Catarse?</p>
 
-						<!-- navigation -->
-						<a class="arrow-up" href="#/5/5">anterior</a>
-					</section>
+
+
+					<!-- navigation -->
+					<a class="arrow-left" href="#/5/5">anterior</a>
 				</section>
 			</div>
 		</div>
