final content ans some adjusts

--- a/index.html
+++ b/index.html
@@ -21,21 +21,29 @@
 		<script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
 
-		<script type="text/javascript" src="//use.typekit.net/phj1ycj.js"></script>
-		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-	</head>
+		<!-- G+ -->
+		<meta itemprop="name" content="">
+		<meta itemprop="description" content="">
+		<meta itemprop="image" content="">
+
+		<meta property="og:title" content="" />
+		<meta property="og:description" content="" />
+		<meta property="og:url" content="" />
+		<meta property="og:image" content="" />
+		<meta property="og:site_name" content="" />
 
 	<body>
 		<div class="reveal">
 			<div class="share">
-				<p>Compartilhe</p>
+				<p>Compartilhe a pesquisa!</p>
 				<ul>
-					<li><a href="#">facebook</a></li>
-					<li><a href="#">twitter</a></li>
-					<li><a href="#">google+</a></li>
+					<li><div class="fb-share-button" data-href="http://pesquisa.catarse.me" data-type="button_count"></div></li>
+					<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://pesquisa.catarse.me/" data-text="Texto do twitt" data-via="catarse" data-lang="pt" data-related="catarse" data-hashtags="rfcbr">Tweetar</a></li>
+					<li><div class="g-plus" data-action="share" data-annotation="bubble" data-height="15"></div></li>
+
 				</ul>
 			</div>
-			<div class="stamp"></div>
+			<div class="stamp">#rfcbr</div>
 			<!-- 0 -->
 			<div class="slides">
 				<section data-background="#eeeeee">
@@ -145,7 +153,7 @@
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/4">anterior</a>
-					<a class="arrow-right" href="#/5/1">próximo</a>
+					<a class="arrow-right" href="#/6">próximo</a>
 				</section>
 
 				<!-- 6 -->
@@ -156,7 +164,7 @@
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/5">anterior</a>
-					<a class="arrow-right" href="#/5/2">próximo</a>
+					<a class="arrow-right" href="#/7">próximo</a>
 				</section>
 
 				<!-- 7 -->
@@ -166,8 +174,8 @@
 					<p>Quem somos nós? Com esta pergunta, começamos a compor o retrato do financiamento coletivo no Brasil, sob a perspectiva de quem faz ele acontecer. Muitas são as possibilidades de contar.</p>
 
 					<!-- navigation -->
-					<a class="arrow-left" href="#/5/1">anterior</a>
-					<a class="arrow-right" href="#/5/3">próximo</a>
+					<a class="arrow-left" href="#/6">anterior</a>
+					<a class="arrow-right" href="#/8">próximo</a>
 				</section>
 
 				<!-- 8 -->
@@ -177,8 +185,8 @@
 					<p>Quem somos nós? Com esta pergunta, começamos a compor o retrato do financiamento coletivo no Brasil, sob a perspectiva de quem faz ele acontecer. Muitas são as possibilidades de contar.</p>
 
 					<!-- navigation -->
-					<a class="arrow-left" href="#/5/2">anterior</a>
-					<a class="arrow-right" href="#/5/4">próximo</a>
+					<a class="arrow-left" href="#/7">anterior</a>
+					<a class="arrow-right" href="#/9">próximo</a>
 				</section>
 
 				<!-- 9 -->
@@ -188,8 +196,8 @@
 					<p>Quem somos nós? Com esta pergunta, começamos a compor o retrato do financiamento coletivo no Brasil, sob a perspectiva de quem faz ele acontecer. Muitas são as possibilidades de contar.</p>
 
 					<!-- navigation -->
-					<a class="arrow-left" href="#/5/3">anterior</a>
-					<a class="arrow-right" href="#/5/5">próximo</a>
+					<a class="arrow-left" href="#/8">anterior</a>
+					<a class="arrow-right" href="#/10">próximo</a>
 				</section>
 
 				<!-- 10 -->
@@ -198,21 +206,39 @@
 					<p class="big-subtitle">(com dados bonitões, cheio de infográficos e informações quentes sobre a pesquisa)</p>
 
 					<!-- navigation -->
-					<a class="arrow-left" href="#/5/4">anterior</a>
-					<a class="arrow-right" href="#/5/6">próximo</a>
+					<a class="arrow-left" href="#/9">anterior</a>
+					<a class="arrow-right" href="#/11">próximo</a>
 				</section>
 
 				<!-- 11 -->
 				<section data-background="#eeeeee">
 					<h2 class="green-h2">Também estamos curiosos</h2>
-					<p class="presentation-text">Nós do Catarse e da Chorus achamos que essa pesquisa merece todo carinho e atenção do mundo para entregarmos a você um trabalho lindo, completo e com ainda mais surpresas. Precisamos de um pouco mais de tempo para isso...</p>
-					<p class="presentation-text">Em janeiro de 2014, quando o Catarse completará 3 aninhos de vida, esse será o nosso presente para a comunidade de financiamento coletivo mais curiosa do Brasil!</p>
-					<p class="presentation-text">Quer saber sobre o lançamento da pesquisa e receber novidades do Catarse?</p>
+					<p class="final-text">Nós do Catarse e da Chorus achamos que essa pesquisa merece todo carinho e atenção do mundo para entregarmos a você um trabalho lindo, completo e com ainda mais surpresas. Precisamos de um pouco mais de tempo para isso...</p>
+					<p class="final-text">Em janeiro de 2014, quando o Catarse completará 3 aninhos de vida, esse será o nosso presente para a comunidade de financiamento coletivo mais curiosa do Brasil!</p>
+					<p class="final-text">Quer saber sobre o lançamento da pesquisa e receber novidades do Catarse?</p>
 
+					<!-- Begin MailChimp Signup Form -->
+					<div id="mc_embed_signup">
+						<form action="http://catarse.us5.list-manage.com/subscribe/post?u=ebfcd0d16dbb0001a0bea3639&amp;id=46e8b40265" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+							<div class="mc-field-group">
+								<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Digite seu email e assine nossa News!">
+							</div>
+							<div id="mce-responses" class="clear">
+								<div class="response" id="mce-error-response" style="display:none"></div>
+								<div class="response" id="mce-success-response" style="display:none"></div>
+							</div>
+							<div class="clear">
+								<input type="submit" value="Assine" name="subscribe" id="mc-embedded-subscribe" class="button">
+							</div>
+						</form>
+					</div>
+					<!--End mc_embed_signup-->
 
+					<hr>
+					<p class="back-project">Quer fazer parte dessa história AGORA? <a href="#">Apoie um projeto!</a></p>
 
 					<!-- navigation -->
-					<a class="arrow-left" href="#/5/5">anterior</a>
+					<a class="arrow-left" href="#/10">anterior</a>
 				</section>
 			</div>
 		</div>
@@ -244,6 +270,30 @@
 				]
 			});
 		</script>
+
+		<!-- Facebook -->
+		<div id="fb-root"></div>
+		<script>(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id)) return;
+		  js = d.createElement(s); js.id = id;
+		  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=229023540487586";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));</script>
+
+		<!-- G+ -->
+		<script type="text/javascript">
+		  window.___gcfg = {lang: 'pt-BR'};
+
+		  (function() {
+		    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+		    po.src = 'https://apis.google.com/js/platform.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+		  })();
+		</script>
+
+		<!-- Twitter -->
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 	</body>
 </html>
