text and visual adjustments

--- a/home.html
+++ b/home.html
@@ -4,10 +4,9 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>Retrato financiamento coletivo Brasil - Catarse e Chorus</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="Confira a primeira e maior pesquisa já feita sobre o cenário do financiamento coletivo brasileiro. A #rfcbr 2013 é fruto da parceria entre Catarse, maior plataforma de crowdfunding do Brasil e Chorus,  empresa de pesquisa com foco em projetos ligados à cultura e sociedade.">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -22,15 +21,15 @@
 		<![endif]-->
 
 		<!-- G+ -->
-		<meta itemprop="name" content="">
-		<meta itemprop="description" content="">
-		<meta itemprop="image" content="">
+		<meta itemprop="name" content="Retrato do Financiamento Coletivo BR #rfcbr">
+		<meta itemprop="description" content="Confira a primeira e maior pesquisa já feita sobre o cenário do financiamento coletivo brasileiro. A #rfcbr 2013 é fruto da parceria entre Catarse, maior plataforma de crowdfunding do Brasil e Chorus,  empresa de pesquisa com foco em projetos ligados à cultura e sociedade.">
+		<meta itemprop="image" content="img/social.jpg">
 
-		<meta property="og:title" content="" />
-		<meta property="og:description" content="" />
-		<meta property="og:url" content="" />
-		<meta property="og:image" content="" />
-		<meta property="og:site_name" content="" />
+		<meta property="og:title" content="Retrato do Financiamento Coletivo BR #rfcbr" />
+		<meta property="og:description" content="Confira a primeira e maior pesquisa já feita sobre o cenário do financiamento coletivo brasileiro. A #rfcbr 2013 é fruto da parceria entre Catarse, maior plataforma de crowdfunding do Brasil e Chorus,  empresa de pesquisa com foco em projetos ligados à cultura e sociedade." />
+		<meta property="og:url" content="http://pesquisa.catarse.me" />
+		<meta property="og:image" content="img/social.jpg" />
+		<meta property="og:site_name" content="Retrato financiamento coletivo Brasil - Catarse e Chorus" />
 
 	<body>
 		<div class="reveal">
@@ -38,7 +37,7 @@
 				<p>Compartilhe a pesquisa!</p>
 				<ul>
 					<li><div class="fb-share-button" data-href="http://pesquisa.catarse.me" data-type="button_count"></div></li>
-					<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://pesquisa.catarse.me/" data-text="Texto do twitt" data-via="catarse" data-lang="pt" data-related="catarse" data-hashtags="rfcbr">Tweetar</a></li>
+					<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://pesquisa.catarse.me/" data-text="Confira a pesquisa Retrato do Financiamento Coletivo BR e entenda o cenário do crowdfunding brasileiro! #rfcbr by @catarse e Chorus.vc" data-lang="pt">Tweetar</a></li>
 					<li><div class="g-plus" data-action="share" data-annotation="bubble" data-height="15"></div></li>
 
 				</ul>
@@ -46,7 +45,7 @@
 			<div class="stamp">#rfcbr</div>
 			<!-- 0 -->
 			<div class="slides">
-				<section data-background="#eeeeee">
+				<section data-background="radial-gradient(circle, #ffffff, #eeeeee)">
 					<div class="full-width">
 						<h1 class="presentation-frame">
 							retrato<br>
@@ -58,23 +57,24 @@
 						<img src="img/logos.png"></img>
 
 						<!-- navigation -->
-						<a class="arrow-right" href="#/1">próximo</a>
+						<a class="arrow-right first-arrow" href="#/1">Começar</a>
 					</div>
 				</section>
 
 				<!-- 1 -->
-				<section data-background="#eeeeee">
-					<p class="presentation-text">A pesquisa Retrato do Financiamento no Brasil é um primeiro passo para um maior entendimento sobre o cenário do crowdfunding brasileiro. Os dados que serão apresentados são um recorte, e tem o intuito de permitir aos participantes deste mercado, sejam plataformas, realizadores ou apoiadores, compreender melhor o meio no qual estão inseridos.</p>
+				<section data-background="radial-gradient(circle, #ffffff, #eeeeee)">
+					<p class="presentation-text">A pesquisa Retrato do Financiamento no Brasil é um primeiro passo para um maior entendimento sobre o cenário do crowdfunding brasileiro. Os dados que serão apresentados são um recorte, e tem o intuito de permitir aos participantes deste ecosistema, sejam plataformas, realizadores ou apoiadores, compreender melhor o meio no qual estão inseridos.</p>
 					<p class="presentation-text">Acreditamos que quanto mais disponibilizarmos informação aberta a todos, mais potência teremos ao desenvolver o financiamento coletivo em terras brasileiras.</p>
-					<p class="presentation-text">Este estudo é uma parceria entre o Catarse, maior plataforma de financiamento coletivo do Brasil, e a Chorus, empresa de pesquisa com foco em projetos ligados à cultura e sociedade.</p>
+					<p class="presentation-text">Este estudo é uma parceria entre o Catarse, maior comunidade de financiamento coletivo do Brasil, e a Chorus, empresa de pesquisa com foco em projetos ligados à cultura e sociedade.</p>
 					<img src="img/logos.png"></img>
 
 					<!-- navigation -->
+					<a class="arrow-left" href="#/0">anterior</a>
 					<a class="arrow-right" href="#/2">próximo</a>
 				</section>
 
 				<!-- 2 -->
-				<section data-background="#57bf72">
+				<section data-background="radial-gradient(circle, #9BDAA3, #57bf72)">
 					<h2 class="dark-h2">O que queremos?</h2>
 					<div class="we-want">
 						<h3>conhecer</h3>
@@ -95,21 +95,21 @@
 				</section>
 
 				<!-- 3 -->
-				<section data-background="#73c260">
+				<section data-background="radial-gradient(circle, #ACDA97, #73C260)">
 					<h2 class="dark-h2">O que fizemos?</h2>
 					<div class="we-done">
-						<p class="we-done-presentation">Solicitamos a nossa base de usuários, assinantes da nossa newsletter e sequidores em redes sociais que respondessem a um questionário online com abordagens quantitavidas e qualitativas sobre financiamento coletivo.</p>
+						<p class="we-done-presentation">Solicitamos a nossa base de usuários, assinantes da nossa newsletter e seguidores em redes sociais que respondessem a um questionário online com abordagens quantitativas e qualitativas sobre financiamento coletivo.</p>
 						<p class="we-done-data">
 							<strong class="we-done-numbers">3336</strong>
-							Pessoas responderam o questionário
+							pessoas responderam o questionário
 						</p>
 						<p class="we-done-data">
 							<strong class="we-done-numbers">1.7%</strong>
-							Margem de erro dos dados estatísticos
+							margem de erro dos dados estatísticos
 						</p>
 						<p class="we-done-data">
 							<strong class="we-done-duration">29/08 a 17/09/2013</strong>
-							Período em que os questionários foram respondidos
+							período em que os questionários foram respondidos
 						</p>
 					</div>
 
@@ -119,19 +119,20 @@
 				</section>
 
 				<!-- 4 -->
-				<section data-background="#9bcb55">
+				<section data-background="radial-gradient(circle, #C4E18B, #9BCB55)">
 					<h2 class="dark-h2">Você respondeu o <br>questionário?</h2>
-					<p class="question">Para os resultados da pesquisa ficarem ainda mais interessantes, queremos saber se os leitores responderam ou não o questionário. Relaxa que isso não muda em nada o que você vai ver! É só para fazermos tcha tcha e tchu tchu pois não sei mais o que escrever. Sou só um designer laiautando e pensando na vida...</p>
+					<p class="question">Queremos saber se você que está nos visitando respondeu ao questionário que gerou os resultados dessa pesquisa. Fique tranquilo, sua resposta não vai te limitar em nada. É mais para sabermos se conseguiremos expandir nosso alcance na divulgação desse trabalho!</p>
 
 					<!-- navigation -->
-					<a class="question-button" href="#/5">não</a>
+					<a class="arrow-left" href="#/3">anterior</a>
 					<a class="question-button" href="#/5">sim</a>
+					<a class="question-button" href="#/5">não</a>
 				</section>
 
 				<!-- 5 -->
-				<section data-background="#e89e39">
+				<section data-background="radial-gradient(circle, #F1C67B, #E89E39">
 					<h2 class="light-h2">Como lemos o resultado?</h2>
-					<p class="subtitle">Separamos a pesquisa em capítulos, que agrupam questões relacionadas e facilitam a leitura e entendimento dos dados.</p>
+					<p class="subtitle">Separamos a pesquisa nos capítulos descritos abaixo. Eles agrupam questões relacionadas e facilitam a leitura e entendimento dos dados.</p>
 					<div class="chapters">
 						<figure class="result-group">
 							<img src="img/icone-perfil.png">
@@ -157,10 +158,10 @@
 				</section>
 
 				<!-- 6 -->
-				<section class="result-group-page" data-background="#f38c34">
+				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
 					<img src="img/icone-perfil.png">
 					<h3>Perfil</h3>
-					<p>Quem somos nós? Com esta pergunta, começamos a compor o retrato do financiamento coletivo no Brasil, sob a perspectiva de quem faz ele acontecer. Muitas são as possibilidades de contar.</p>
+					<p>Quem somos nós? Foi essa a pergunta básica que nos levou a realizar esta pesquisa. Nesse capítulo conheceremos um pouco mais sobre o perfil pessoas que participam do financiamento coletivo no Brasil.</p>
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/5">anterior</a>
@@ -168,10 +169,10 @@
 				</section>
 
 				<!-- 7 -->
-				<section class="result-group-page" data-background="#f37c34">
+				<section class="result-group-page" data-background="radial-gradient(circle, #F9AF78, #F37C34)">
 					<img src="img/icone-financiamento.png">
 					<h3>Financiamento</h3>
-					<p>Quem somos nós? Com esta pergunta, começamos a compor o retrato do financiamento coletivo no Brasil, sob a perspectiva de quem faz ele acontecer. Muitas são as possibilidades de contar.</p>
+					<p>O que é esse tipo de financiamento que é coletivo, que pode ser um mecenato moderno, que pode ser economia solidária, criativa, que é mutante, volátil e parece esgueirar-se por entre os caminhos dos sistemas econômicos atuais? O que é esse tal de Financiamento Coletivo?</p>
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/6">anterior</a>
@@ -179,10 +180,10 @@
 				</section>
 
 				<!-- 8 -->
-				<section class="result-group-page" data-background="#f36c34">
+				<section class="result-group-page" data-background="radial-gradient(circle, #F8A87B, #F36C34)">
 					<img src="img/icone-rede.png">
 					<h3>Rede</h3>
-					<p>Quem somos nós? Com esta pergunta, começamos a compor o retrato do financiamento coletivo no Brasil, sob a perspectiva de quem faz ele acontecer. Muitas são as possibilidades de contar.</p>
+					<p>Como se configuram os círculos de influência em uma campanha de financiamento coletivo? Como um projeto atinge diferentes camadas de pessoas e de que maneira esse processo ocorre? Essas são algumas das perguntas respondidas nos dados a seguir.</p>
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/7">anterior</a>
@@ -190,10 +191,10 @@
 				</section>
 
 				<!-- 9 -->
-				<section class="result-group-page" data-background="#f35c34">
+				<section class="result-group-page" data-background="radial-gradient(circle, #F79D7B, #F35C34)">
 					<img src="img/icone-realizadores.png">
 					<h3>Realizadores</h3>
-					<p>Quem somos nós? Com esta pergunta, começamos a compor o retrato do financiamento coletivo no Brasil, sob a perspectiva de quem faz ele acontecer. Muitas são as possibilidades de contar.</p>
+					<p>Qual a idade típica de um realizador? Quais são as dificuldades que têm ao empreenderem uma campanha de financiamento coletivo? Conheça um pouco mais sobre os criadores de projetos que passaram pelo Catarse e veja dicas para a formatação de uma boa campanha.</p>
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/8">anterior</a>
@@ -201,7 +202,7 @@
 				</section>
 
 				<!-- 10 -->
-				<section data-background="#eeeeee">
+				<section data-background="radial-gradient(circle, #FFFFFF, #EEEEEE)">
 					<h2 class="dark-h2">Curioso para ver o resultado?</h2>
 					<p class="big-subtitle">(com dados bonitões, cheio de infográficos e informações quentes sobre a pesquisa)</p>
 
@@ -211,9 +212,9 @@
 				</section>
 
 				<!-- 11 -->
-				<section data-background="#eeeeee">
+				<section data-background="radial-gradient(circle, #FFFFFF, #EEEEEE)">
 					<h2 class="green-h2">Também estamos curiosos</h2>
-					<p class="final-text">Nós do Catarse e da Chorus achamos que essa pesquisa merece todo carinho e atenção do mundo para entregarmos a você um trabalho lindo, completo e com ainda mais surpresas. Precisamos de um pouco mais de tempo para isso...</p>
+					<p class="final-text">Nós do Catarse e da Chorus achamos que essa pesquisa merece todo o carinho e atenção do mundo para entregarmos a vocês um trabalho lindo, completo e com ainda mais surpresas.</p>
 					<p class="final-text">Em janeiro de 2014, quando o Catarse completará 3 aninhos de vida, esse será o nosso presente para a comunidade de financiamento coletivo mais curiosa do Brasil!</p>
 					<p class="final-text">Quer saber sobre o lançamento da pesquisa e receber novidades do Catarse?</p>
 
