--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 					<!--End mc_embed_signup-->
 
 					<hr>
-					<p class="back-project">Quer fazer parte dessa história AGORA? <a href="#">Apoie um projeto!</a></p>
+					<p class="back-project">Quer fazer parte dessa história AGORA? <a href="http://catarse.me/explore?ref=hotsitepesquisa3anos">Apoie um projeto!</a></p>
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/10">anterior</a>
