--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 
 		<title>Retrato financiamento coletivo Brasil - Catarse e Chorus</title>
 
-		<meta name="description" content="Confira a primeira e maior pesquisa já feita sobre o cenário do financiamento coletivo brasileiro. A #rfcbr 2013 é fruto da parceria entre Catarse, maior plataforma de crowdfunding do Brasil e Chorus,  empresa de pesquisa com foco em projetos ligados à cultura e sociedade.">
+		<meta name="description" content="Confira a primeira e maior pesquisa já feita sobre o cenário do financiamento coletivo brasileiro. A #rfcbr 2013 é fruto da parceria entre Catarse, maior plataforma de crowdfunding do Brasil e Chorus,  empresa de pesquisa com foco em projetos ligados à cultura e sociedade">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
