adding catarse link to support text and link on the stamp

--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
 
 				</ul>
 			</div>
-			<div class="stamp">#rfcbr</div>
+			<div class="stamp"><a href="#/0">#rfcbr</a></div>
 			<!-- 0 -->
 			<div class="slides">
 				<section data-background="radial-gradient(circle, #ffffff, #eeeeee)">
@@ -236,7 +236,7 @@
 					<!--End mc_embed_signup-->
 
 					<hr>
-					<p class="back-project">Quer fazer parte dessa história AGORA? <a href="#">Apoie um projeto!</a></p>
+					<p class="back-project">Quer fazer parte dessa história AGORA? <a href="http://catarse.me/explore?ref=hotsitepesquisa3anos">Apoie um projeto!</a></p>
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/10">anterior</a>
