fix share box size and positioning

--- a/home.html
+++ b/home.html
@@ -183,7 +183,7 @@
 				<section class="result-group-page" data-background="radial-gradient(circle, #F8A87B, #F36C34)">
 					<img src="img/icone-rede.png">
 					<h3>Rede</h3>
-					<p>Como se configuram os círculos de influência em uma campanha de financiamento coletivo? Como um projeto atinge diferentes camadas de pessoas e de que maneira esse processo ocorre? Essas são algumas das perguntas respondidas nos dados a seguir.</p>
+					<p>Como se configuram os círculos de influência em uma campanha de financiamento coletivo? Como um projeto atinge diferentes camadas de pessoas e de que maneira esse processo ocorre? Essas são algumas das perguntas respondidas nesse capítulo.</p>
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/7">anterior</a>
