--- a/home.html
+++ b/home.html
@@ -77,16 +77,16 @@
 				<section data-background="radial-gradient(circle, #9BDAA3, #57bf72)">
 					<h2 class="dark-h2">O que queremos?</h2>
 					<div class="we-want">
-						<h3>conhecer</h3>
-						<p>o perfil das pessoas que fazem o financiamento coletivo no Brasil</p>
-						<h3>compreender</h3>
+						<h3>Conhecer</h3>
+						<p>o perfil das pessoas que fazem o financiamento coletivo acontecer no Brasil</p>
+						<h3>Compreender</h3>
 						<p>os comportamentos, motivações e porquês das pessoas ao apoiarem um projeto</p>
 					</div>
 					<div class="we-want">
-						<h3>analisar</h3>
+						<h3>Analisar</h3>
 						<p>o cenário atual do financiamento coletivo no país</p>
-						<h3>aprensentar</h3>
-						<p>um pouco da ótica dos realizadores de projetros que já passaram pela plataforma do Catarse</p>
+						<h3>Apresentar</h3>
+						<p>um pouco da ótica dos realizadores de projetos que já passaram pela plataforma do Catarse</p>
 					</div>
 
 					<!-- navigation -->
@@ -121,7 +121,7 @@
 				<!-- 4 -->
 				<section data-background="radial-gradient(circle, #C4E18B, #9BCB55)">
 					<h2 class="dark-h2">Você respondeu o <br>questionário?</h2>
-					<p class="question">Queremos saber se você que está nos visitando respondeu ao questionário que gerou os resultados dessa pesquisa. Fique tranquilo, sua resposta não vai te limitar em nada. É mais para sabermos se conseguiremos expandir nosso alcance na divulgação desse trabalho!</p>
+					<p class="question">Queremos saber se você que está nos visitando respondeu ao questionário que gerou os resultados dessa pesquisa. Fique tranquilo, sua resposta não vai te limitar em nada e serve apenas para diferenciarmos quem está voltando de quem está conhecendo a pesquisa agora.</p>
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/3">anterior</a>
@@ -161,7 +161,7 @@
 				<section class="result-group-page" data-background="radial-gradient(circle, #F8BA77, #F38C34)">
 					<img src="img/icone-perfil.png">
 					<h3>Perfil</h3>
-					<p>Quem somos nós? Foi essa a pergunta básica que nos levou a realizar esta pesquisa. Nesse capítulo conheceremos um pouco mais sobre o perfil pessoas que participam do financiamento coletivo no Brasil.</p>
+					<p>Quem somos nós? Foi essa a pergunta básica que nos levou a realizar esta pesquisa. Nesse capítulo conheceremos um pouco mais sobre o perfil das pessoas que participam do financiamento coletivo no Brasil.</p>
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/5">anterior</a>
@@ -172,7 +172,7 @@
 				<section class="result-group-page" data-background="radial-gradient(circle, #F9AF78, #F37C34)">
 					<img src="img/icone-financiamento.png">
 					<h3>Financiamento</h3>
-					<p>O que é esse tipo de financiamento que é coletivo, que pode ser um mecenato moderno, que pode ser economia solidária, criativa, que é mutante, volátil e parece esgueirar-se por entre os caminhos dos sistemas econômicos atuais? O que é esse tal de Financiamento Coletivo?</p>
+					<p>O que é esse tipo de financiamento que é coletivo? Em quais setores parece ter mais força? Para quê os brasileiros estão usando o financiamento coletivo?</p>
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/6">anterior</a>
@@ -213,8 +213,7 @@
 
 				<!-- 11 -->
 				<section data-background="radial-gradient(circle, #FFFFFF, #EEEEEE)">
-					<h2 class="green-h2">Também estamos curiosos</h2>
-					<p class="final-text">Nós do Catarse e da Chorus achamos que essa pesquisa merece todo o carinho e atenção do mundo para entregarmos a vocês um trabalho lindo, completo e com ainda mais surpresas.</p>
+					<p class="final-text">Nós do Catarse e da Chorus achamos que essa pesquisa merece todo o carinho e atenção do mundo para entregarmos a vocês um trabalho lindo, completo e com ainda mais surpresas. A ideia aqui é chamar sua atenção e dizer que esse trabalho está em curso!</p>
 					<p class="final-text">Em janeiro de 2014, quando o Catarse completará 3 aninhos de vida, esse será o nosso presente para a comunidade de financiamento coletivo mais curiosa do Brasil!</p>
 					<p class="final-text">Quer saber sobre o lançamento da pesquisa e receber novidades do Catarse?</p>
 
