--- a/home.html
+++ b/home.html
@@ -125,8 +125,8 @@
 
 					<!-- navigation -->
 					<a class="arrow-left" href="#/3">anterior</a>
-					<a class="question-button" href="#/5">sim</a>
-					<a class="question-button" href="#/5">não</a>
+					<a class="question-button" onclick="_gaq.push(['_trackEvent', 'response', 'yes'])" href="#/5">sim</a>
+					<a class="question-button" onclick="_gaq.push(['_trackEvent', 'response', 'no'])" href="#/5">não</a>
 				</section>
 
 				<!-- 5 -->
@@ -296,14 +296,15 @@
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 		<!-- Google Analytics -->
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		  ga('create', 'UA-5421030-12', 'catarse.me');
-		  ga('send', 'pageview');
+		<script type="text/javascript">
+		  var _gaq = _gaq || [];
+		  _gaq.push(['_setAccount', 'UA-5421030-12']);
+		  _gaq.push(['_trackPageview']);
+		  (function() {
+		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		  })();
 
 		</script>
 
