rollback on last slide title

--- a/home.html
+++ b/home.html
@@ -213,6 +213,7 @@
 
 				<!-- 11 -->
 				<section data-background="radial-gradient(circle, #FFFFFF, #EEEEEE)">
+					<h2 class="green-h2">Também estamos curiosos</h2>
 					<p class="final-text">Nós do Catarse e da Chorus achamos que essa pesquisa merece todo o carinho e atenção do mundo para entregarmos a vocês um trabalho lindo, completo e com ainda mais surpresas. A ideia aqui é chamar sua atenção e dizer que esse trabalho está em curso!</p>
 					<p class="final-text">Em janeiro de 2014, quando o Catarse completará 3 aninhos de vida, esse será o nosso presente para a comunidade de financiamento coletivo mais curiosa do Brasil!</p>
 					<p class="final-text">Quer saber sobre o lançamento da pesquisa e receber novidades do Catarse?</p>
