update on twitter text

--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
 				<p>Compartilhe a pesquisa!</p>
 				<ul>
 					<li><div class="fb-share-button" data-href="http://pesquisa.catarse.me" data-type="button_count"></div></li>
-					<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://pesquisa.catarse.me/" data-text="Confira a pesquisa Retrato do Financiamento Coletivo BR e entenda o cenário do crowdfunding brasileiro! #rfcbr by @catarse e Chorus.vc" data-lang="pt">Tweetar</a></li>
+					<li><a href="https://twitter.com/share" class="twitter-share-button" data-text="Confira a pesquisa Retrato do Financiamento Coletivo no Brasil! #rfcbr http://pesquisa.catarse.me by @catarse e Chorus.vc " data-lang="pt">Tweetar</a></li>
 					<li><div class="g-plus" data-action="share" data-annotation="bubble" data-height="15"></div></li>
 
 				</ul>
