update on google plus button

--- a/home.html
+++ b/home.html
@@ -38,8 +38,7 @@
 				<ul>
 					<li><div class="fb-share-button" data-href="http://pesquisa.catarse.me" data-type="button_count"></div></li>
 					<li><a href="https://twitter.com/share" class="twitter-share-button" data-text="Confira a pesquisa Retrato do Financiamento Coletivo no Brasil! #rfcbr http://pesquisa.catarse.me by @catarse e Chorus.vc " data-lang="pt">Tweetar</a></li>
-					<li><div class="g-plus" data-action="share" data-annotation="bubble" data-height="15"></div></li>
-
+					<li><div class="g-plusone" data-size="medium"></div></li>
 				</ul>
 			</div>
 			<div class="stamp"><a href="#/0">#rfcbr</a></div>
